--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,77 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/off_white_smoke"
     tools:context=".MainActivity">
 
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/row16"
+        android:background="@color/roolet_blue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/settingsImageView"
+        android:layout_width="@dimen/row05"
+        android:layout_height="@dimen/row05"
+        android:layout_marginStart="@dimen/row02"
+        android:layout_marginTop="@dimen/row02"
+        android:contentDescription="@null"
+        android:src="@drawable/ic_outline_settings_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
+        android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:fontFamily="serif"
+        android:text="@string/roolet"
+        android:textColor="@color/white"
+        android:textSize="@dimen/subhead2"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@id/addGroupImageView"
+        app:layout_constraintEnd_toStartOf="@id/addGroupImageView"
+        app:layout_constraintStart_toEndOf="@id/settingsImageView"
+        app:layout_constraintTop_toTopOf="@id/addGroupImageView" />
+
+    <ImageView
+        android:id="@+id/addGroupImageView"
+        android:layout_width="@dimen/row05"
+        android:layout_height="@dimen/row05"
+        android:layout_marginTop="@dimen/row02"
+        android:layout_marginEnd="@dimen/row02"
+        android:contentDescription="@null"
+        android:src="@drawable/ic_outline_group_add_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/groupRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/row02"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/titleTextView"
+        tools:itemCount="2"
+        tools:listitem="@layout/item_roolet_group" />
+
+    <TextView
+        android:id="@+id/instructionsTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/row04"
+        android:layout_marginEnd="@dimen/row04"
+        android:gravity="center"
+        android:text="@string/add_party_label"
+        android:textSize="@dimen/caption10"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
