--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/text1"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nameTextView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/row06"
+    android:gravity="center"
     android:clickable="true"
-    android:focusable="true" />
+    android:focusable="true"
+    tools:text="Yo" />
