--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -17,40 +17,90 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/settingsImageView"
-        android:layout_width="@dimen/row05"
-        android:layout_height="@dimen/row05"
+        android:id="@+id/backImageView"
+        android:layout_width="@dimen/row04"
+        android:layout_height="@dimen/row04"
         android:layout_marginStart="@dimen/row02"
         android:layout_marginTop="@dimen/row02"
         android:contentDescription="@null"
-        android:src="@drawable/ic_outline_settings_24"
+        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/titleTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <EditText
+        android:id="@+id/groupNameEditText"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/row04"
+        android:layout_marginStart="@dimen/row04"
+        android:layout_marginEnd="@dimen/row04"
+        android:autofillHints="@null"
+        android:background="@drawable/white_borders_off_white_bg_rounded"
         android:fontFamily="serif"
-        android:text="@string/roolet"
+        android:gravity="center"
+        android:hint="@string/party_name"
+        android:inputType="text"
         android:textColor="@color/white"
-        android:textSize="@dimen/subhead2"
+        android:textSize="@dimen/caption6"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/addGroupImageView"
-        app:layout_constraintEnd_toStartOf="@id/addGroupImageView"
-        app:layout_constraintStart_toEndOf="@id/settingsImageView"
-        app:layout_constraintTop_toTopOf="@id/addGroupImageView" />
+        app:layout_constraintBottom_toBottomOf="@id/saveGroupTextView"
+        app:layout_constraintEnd_toStartOf="@id/saveGroupTextView"
+        app:layout_constraintStart_toEndOf="@id/backImageView"
+        app:layout_constraintTop_toTopOf="@id/saveGroupTextView" />
 
-    <ImageView
-        android:id="@+id/addGroupImageView"
-        android:layout_width="@dimen/row05"
-        android:layout_height="@dimen/row05"
+    <TextView
+        android:id="@+id/saveGroupTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/row04"
         android:layout_marginTop="@dimen/row02"
         android:layout_marginEnd="@dimen/row02"
         android:contentDescription="@null"
+        android:gravity="center"
         android:src="@drawable/ic_outline_group_add_24"
+        android:text="@string/save"
+        android:textColor="@color/white_100"
+        android:textSize="@dimen/caption7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/filterFrameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/row06"
+        android:animateLayoutChanges="true"
+        android:background="@color/light_gray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view">
+
+        <EditText
+            android:id="@+id/filterEditText"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/row01"
+            android:layout_weight="1"
+            android:autofillHints="@null"
+            android:background="@drawable/rounded_bg"
+            android:drawableStart="@drawable/ic_baseline_search_24"
+            android:drawablePadding="@dimen/row01"
+            android:hint="@string/search_contacts"
+            android:inputType="text"
+            android:paddingStart="@dimen/row01"
+            android:paddingEnd="@dimen/row01"
+            android:textColor="@color/black"
+            tools:ignore="LabelFor" />
+
+        <TextView
+            android:id="@+id/cancelTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="@dimen/row01"
+            android:gravity="center"
+            android:text="@string/cancel"
+            android:textColor="@color/black_70"
+            android:visibility="gone"
+            tools:visibility="visible" />
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/contactsRecyclerView"
@@ -59,7 +109,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/view"
+        app:layout_constraintTop_toBottomOf="@+id/filterFrameLayout"
         tools:listitem="@layout/contact_list_item" />
 
     <ProgressBar
