--- a/app/src/main/res/layout/selected_contact_list_item.xml
+++ b/app/src/main/res/layout/selected_contact_list_item.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/selectedContactImageView"
-        android:layout_width="@dimen/row05"
-        android:layout_height="@dimen/row05"
+        android:layout_width="@dimen/row06"
+        android:layout_height="@dimen/row06"
         android:contentDescription="@null"
         android:src="@mipmap/ic_launcher"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,17 +18,18 @@
     <TextView
         android:id="@+id/selectedContactNameTextView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="@dimen/row02"
         android:ellipsize="end"
         android:gravity="center"
-        android:textStyle="bold"
         android:textColor="@color/white_100"
         android:textSize="@dimen/caption2"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/selectedContactImageView"
-        tools:text="Aaron King" />
+        tools:text="Aaron King"
+        tools:textColor="@color/black_80" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
