--- a/app/src/main/res/layout/fragment_select_phone_dialog.xml
+++ b/app/src/main/res/layout/fragment_select_phone_dialog.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/row48"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="bottom|center"
     android:background="@color/off_white_smoke">
@@ -20,7 +20,6 @@
         android:textColor="@color/black_80"
         android:textSize="@dimen/caption10"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/instructionsTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,56 +30,71 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/row02"
         android:layout_marginEnd="@dimen/row02"
-        android:layout_marginBottom="@dimen/row02"
         android:gravity="center"
         android:text="@string/select_phone_label"
         android:textColor="@color/black_80"
         android:textSize="@dimen/caption6"
-        app:layout_constraintBottom_toTopOf="@id/mobileButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/mobileButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/row02"
-        android:layout_marginEnd="@dimen/row02"
-        android:layout_marginBottom="@dimen/row005"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/homeButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:text="@string/mobile"
-        tools:visibility="visible" />
+        app:layout_constraintTop_toBottomOf="@id/titleTextView" />
 
-    <Button
-        android:id="@+id/homeButton"
-        android:layout_width="0dp"
+    <!--    <Button-->
+    <!--        android:id="@+id/mobileButton"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginStart="@dimen/row02"-->
+    <!--        android:layout_marginEnd="@dimen/row02"-->
+    <!--        android:layout_marginBottom="@dimen/row005"-->
+    <!--        android:visibility="gone"-->
+    <!--        app:layout_constraintBottom_toTopOf="@id/homeButton"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        tools:text="@string/mobile"-->
+    <!--        tools:visibility="visible" />-->
+
+    <!--    <Button-->
+    <!--        android:id="@+id/homeButton"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginStart="@dimen/row02"-->
+    <!--        android:layout_marginEnd="@dimen/row02"-->
+    <!--        android:layout_marginBottom="@dimen/row005"-->
+    <!--        android:visibility="gone"-->
+    <!--        app:layout_constraintBottom_toTopOf="@id/workButton"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        tools:text="@string/home"-->
+    <!--        tools:visibility="visible" />-->
+
+    <!--    <Button-->
+    <!--        android:id="@+id/workButton"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginStart="@dimen/row02"-->
+    <!--        android:layout_marginEnd="@dimen/row02"-->
+    <!--        android:layout_marginBottom="@dimen/row005"-->
+    <!--        android:visibility="gone"-->
+    <!--        app:layout_constraintBottom_toTopOf="@id/bumperSpace"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        tools:text="@string/work"-->
+    <!--        tools:visibility="visible" />-->
+
+    <LinearLayout
+        android:id="@+id/buttonsLinearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/row02"
+        android:layout_marginTop="@dimen/row01"
         android:layout_marginEnd="@dimen/row02"
-        android:layout_marginBottom="@dimen/row005"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/workButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="@string/home"
-        tools:visibility="visible" />
-
-    <Button
-        android:id="@+id/workButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/row02"
-        android:layout_marginEnd="@dimen/row02"
-        android:layout_marginBottom="@dimen/row005"
-        android:visibility="gone"
+        android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@id/bumperSpace"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:text="@string/work"
-        tools:visibility="visible" />
+        app:layout_constraintTop_toBottomOf="@id/instructionsTextView">
+
+
+    </LinearLayout>
 
     <Space
         android:id="@+id/bumperSpace"
