Reorganized files package structure, added GroupsActivity... need to add group view model and adapter

--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -7,7 +7,7 @@
     android:background="@color/off_white_smoke"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    tools:context=".MainActivity">
+    tools:context=".LauncherActivity">
 
     <View
         android:id="@+id/view"
