--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/off_white_smoke"
-    tools:context=".MainActivity">
+    tools:context=".groups.GroupsActivity">
 
     <View
         android:id="@+id/view"
