--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -62,7 +62,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/titleTextView"
         tools:itemCount="2"
-        tools:listitem="@layout/item_roolet_group" />
+        tools:listitem="@layout/list_item_group" />
 
     <TextView
         android:id="@+id/instructionsTextView"
