--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -23,7 +23,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/row01"
-        android:layout_marginBottom="@dimen/row0025"
         app:layout_constraintBottom_toTopOf="@id/filterFrameLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,52 +30,77 @@
         tools:itemCount="2"
         tools:listitem="@layout/selected_contact_list_item" />
 
-    <ImageView
-        android:id="@+id/backImageView"
-        android:layout_width="@dimen/row04"
-        android:layout_height="@dimen/row04"
+    <FrameLayout
+        android:id="@+id/backDeleteContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/row02"
-        android:layout_marginTop="@dimen/row02"
-        android:contentDescription="@null"
-        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
+        app:layout_constraintBottom_toBottomOf="@id/groupTitleEditText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/groupTitleEditText">
+
+        <ImageView
+            android:id="@+id/backImageView"
+            android:layout_width="@dimen/row04"
+            android:layout_height="@dimen/row04"
+            android:layout_gravity="center"
+            android:contentDescription="@null"
+            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/deleteGroupTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="@dimen/row0025"
+            android:text="@string/delete"
+            android:textColor="@color/white_100"
+            android:textSize="@dimen/caption7"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </FrameLayout>
 
     <EditText
         android:id="@+id/groupTitleEditText"
         android:layout_width="0dp"
         android:layout_height="@dimen/row04"
-        android:layout_marginStart="@dimen/row04"
-        android:layout_marginEnd="@dimen/row04"
+        android:layout_marginStart="@dimen/row03"
+        android:layout_marginTop="@dimen/row02"
+        android:layout_marginEnd="@dimen/row03"
         android:autofillHints="@null"
         android:background="@drawable/white_borders_off_white_bg_rounded"
         android:focusable="true"
-        android:fontFamily="serif"
         android:gravity="center"
         android:hint="@string/party_name"
         android:inputType="text"
+        android:paddingStart="@dimen/row01"
+        android:paddingEnd="@dimen/row01"
         android:textColor="@color/white"
-        android:textSize="@dimen/caption6"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/saveGroupTextView"
+        android:textSize="@dimen/caption7"
         app:layout_constraintEnd_toStartOf="@id/saveGroupTextView"
-        app:layout_constraintStart_toEndOf="@id/backImageView"
-        app:layout_constraintTop_toTopOf="@id/saveGroupTextView" />
+        app:layout_constraintStart_toEndOf="@id/backDeleteContainer"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/saveGroupTextView"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/row04"
-        android:layout_marginTop="@dimen/row02"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/row02"
         android:contentDescription="@null"
         android:gravity="center"
+        android:padding="@dimen/row0025"
         android:src="@drawable/ic_outline_group_add_24"
         android:text="@string/save"
         android:textColor="@color/white_100"
         android:textSize="@dimen/caption7"
+        app:layout_constraintBottom_toBottomOf="@id/groupTitleEditText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/groupTitleEditText" />
 
     <LinearLayout
         android:id="@+id/filterFrameLayout"
