--- a/app/src/main/res/layout/list_item_group.xml
+++ b/app/src/main/res/layout/list_item_group.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="@dimen/row01"
         android:layout_marginTop="@dimen/row01"
         android:contentDescription="@null"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/roolet_icon_1024"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,10 +24,8 @@
         android:layout_width="@dimen/row04"
         android:layout_height="@dimen/row04"
         android:layout_marginStart="@dimen/row04"
-        android:layout_marginTop="@dimen/row005"
-        android:layout_marginBottom="@dimen/row005"
         android:contentDescription="@null"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/roolet_icon_1024"
         app:layout_constraintBottom_toTopOf="@id/memberThreeImageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/memberOneImageView" />
@@ -39,7 +37,7 @@
         android:layout_marginStart="@dimen/row01"
         android:layout_marginBottom="@dimen/row01"
         android:contentDescription="@null"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/roolet_icon_1024"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
