Added roolet icon for contact icon placeholder

--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -12,7 +12,7 @@
         android:layout_gravity="center"
         android:layout_marginStart="@dimen/row01"
         android:contentDescription="@null"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@drawable/roolet_icon_grey" />
 
     <TextView
         android:id="@+id/nameTextView"
