--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -31,10 +31,10 @@
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="serif"
+        android:fontFamily="@font/chunk_five_ex"
         android:text="@string/roolet"
         android:textColor="@color/white"
-        android:textSize="@dimen/subhead2"
+        android:textSize="@dimen/caption12"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/addGroupImageView"
         app:layout_constraintEnd_toStartOf="@id/addGroupImageView"
