--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -44,7 +44,9 @@
             android:layout_width="@dimen/row04"
             android:layout_height="@dimen/row04"
             android:layout_gravity="center"
+            android:background="?attr/selectableItemBackground"
             android:contentDescription="@null"
+            android:padding="@dimen/row005"
             android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -55,6 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="?attr/selectableItemBackground"
             android:padding="@dimen/row0025"
             android:text="@string/delete"
             android:textColor="@color/white_100"
@@ -91,6 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/row02"
+        android:background="?attr/selectableItemBackground"
         android:contentDescription="@null"
         android:gravity="center"
         android:padding="@dimen/row0025"
