--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -22,7 +22,9 @@
         android:layout_height="@dimen/row05"
         android:layout_marginStart="@dimen/row02"
         android:layout_marginTop="@dimen/row02"
+        android:background="?attr/selectableItemBackground"
         android:contentDescription="@null"
+        android:padding="@dimen/row005"
         android:src="@drawable/ic_outline_settings_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -47,7 +49,9 @@
         android:layout_height="@dimen/row05"
         android:layout_marginTop="@dimen/row02"
         android:layout_marginEnd="@dimen/row02"
+        android:background="?attr/selectableItemBackground"
         android:contentDescription="@null"
+        android:padding="@dimen/row005"
         android:src="@drawable/ic_outline_group_add_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
