--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -121,7 +121,7 @@
             android:layout_margin="@dimen/row01"
             android:layout_weight="1"
             android:autofillHints="@null"
-            android:background="@drawable/rounded_bg"
+            android:background="@drawable/rounded_bg_white"
             android:drawableStart="@drawable/ic_baseline_search_24"
             android:drawablePadding="@dimen/row01"
             android:hint="@string/search_contacts"
@@ -180,6 +180,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view"
         tools:text="Instructions"
+        tools:visibility="visible" />
+
+    <include
+        android:id="@+id/errorView"
+        layout="@layout/view_error_dialog"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
