--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
 
     <color name="roolet_blue">#1CCAFF</color>
     <color name="off_white_smoke">#f5f5f5</color>
+    <color name="turquoise">#00292a</color>
 
     <color name="black_05">#0D000000</color>
     <color name="black_10">#1A000000</color>
